fix alignment error for social links

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -139,6 +139,8 @@ h3 {
 }
 
 .social-links li a i{
+    text-align: center;
+    margin: 5px;
     color: white;
     height: 34px;
     width: 34px;
@@ -150,5 +152,9 @@ h3 {
     -moz-transition: all 0.35s ease-in-out;
     -webkit-transition: all 0.35s ease-in-out;
 
-
 }
+
+.social-links-title {
+    padding-left: 15px;
+}
+
